Remove duplicated segment.

--- a/depc-introduction.tex
+++ b/depc-introduction.tex
@@ -18,7 +18,7 @@
     In this system, there is a situation where nodes can collectively do bad things, so that the correct transaction is not packaged, and the transmission of the network is invalid. Since asynchronous system avoids excessive communication in the network, it is more suitable for multiple-step transactions, While the risk of this mechanism lies with the possibility of the majority of CPU power being controlled by dishonest nodes. A good example is the later appeared $51\%$ double spend attack. The last thing the financial system should do is to roll back or double spend, that is also why Bitcoin was not widely accepted at the beginning.
 \end{flushleft}
 \begin{flushleft}
-    Over time, a lot of participants joined the system for the financial benefits. Since the difficulty (for manipulating package mentioned above) of the system raised, the cost of harassing the working system has greatly increased for the bad guys. More stable the system, more profitable being honest rather than being dishonest. At this time, people began to realize the fascination of this crypto currency and numerous fans appeared. After years of difficulty increase, the BTC system has gradually stabilized, making it much harder to do double-spend or rollback. It also inspired the original teachings of Bitcoin, and gathered many crypto enthusiasts. It also inspired the original teachings of Bitcoin, and gathered many crypto enthusiasts. At this time, several new types of crypto currencies had been born or made by forks and copies, many got attacked because of their low computational power. The systems with low difficulty are unsafe and can be easily attacked, while highly available systems need tremendous energy consumption.
+    Over time, a lot of participants joined the system for the financial benefits. Since the difficulty (for manipulating package mentioned above) of the system raised, the cost of harassing the working system has greatly increased for the bad guys. More stable the system, more profitable being honest rather than being dishonest. At this time, people began to realize the fascination of this crypto currency and numerous fans appeared. After years of difficulty increase, the BTC system has gradually stabilized, making it much harder to do double-spend or rollback. It also inspired the original teachings of Bitcoin, and gathered many crypto enthusiasts. At this time, several new types of crypto currencies had been born or made by forks and copies, many got attacked because of their low computational power. The systems with low difficulty are unsafe and can be easily attacked, while highly available systems need tremendous energy consumption.
 \end{flushleft}
 \subsection{Bitcoin Features}
 \begin{flushleft}
